# charybdis

./: README.md
include/ircd/: ircd.h  resource.h
include/ircd/net/: net.h
ircd/: Makefile.am  ircd.cc  net.cc  resource.cc
modules/: Makefile.am  console.cc  m_noop.cc  s_conf.cc  s_keys.cc  s_listen.cc
modules/media/: download.cc  media.cc  media.h  upload.cc
